# ggj19

./: .gitignore  CMakeLists.txt  IDEAS.md  README.md
code/: config.h.in  main.cc
code/local/: ClockHud.cc  ClockHud.h  CrashedShip.cc  CrashedShip.h  DisplayMessage.cc  DisplayMessage.h  FieldOfView.cc  FieldOfView.h  Map.cc  Map.h  Messages.h  OxygenHud.cc  OxygenHud.h  Physics.cc  Physics.h  Player.cc  Player.h  ResourceManager.cc  ResourceManager.h  ResourcesHud.cc  ResourcesHud.h  ResourcesViewer.cc  ResourcesViewer.h  Singletons.cc  Singletons.h  SupplyManager.cc  SupplyManager.h
data/home/images/player/: montage.sh
data/home/map/: Basic Tile.tsx  Map.tmx  MapForDev.tmx  NewSpaceShip.tsx  ResourceSet.tsx  Sea.tsx  Ship.tsx  TileSet.tsx  TreeSet.tsx  montage.sh
data/home/map/rawTiles/tuiles_arbres/: tuile_arbre.psd
